--- a/styleSheets/loginPage.css
+++ b/styleSheets/loginPage.css
@@ -6,7 +6,7 @@ html{
 
 img{
     border: 4px solid black;
-    width: 75%;
+    width: 50%;
 }
 
 form {
@@ -14,7 +14,8 @@ form {
 }
 
 input[type=text], input[type=password] {
-    width: 100%;
+    text-align: center;
+    width: 75%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -23,6 +24,7 @@ input[type=text], input[type=password] {
 }
 
 button {
+    text-align: center;
     background-color: darkred;
     color: white;
     padding: 10px 20px;
@@ -30,7 +32,8 @@ button {
     border: inset;
     border-color: black;
     cursor: pointer;
-    width: 100%;
+    width: 75%;
+    font-size: 18px;
 }
 
 button:hover {
@@ -43,16 +46,18 @@ button:hover {
 }
 
 .inputFields{
+    text-align: center;
     padding: 20px;
 }
 
 .inputFields label{
     background-color: black;
     color: white;
-    width: 100%;
+    width: 75%;
     display: inline-block;
     border: 1px solid black;
     box-sizing: border-box;
+    text-align: left;
 
 }
 
